typescript/checker/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts.stderr
error: TS2363 {
    span: Span {
        lo: BytePos(
            12,
        ),
        hi: BytePos(
            20,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:1:13
  |
1 | var a = 1 - `${ 3 }`;
  |             ^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            34,
        ),
        hi: BytePos(
            43,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:2:13
  |
2 | var b = 1 - `2${ 3 }`;
  |             ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            57,
        ),
        hi: BytePos(
            66,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:3:13
  |
3 | var c = 1 - `${ 3 }4`;
  |             ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            80,
        ),
        hi: BytePos(
            90,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:4:13
  |
4 | var d = 1 - `2${ 3 }4`;
  |             ^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            100,
        ),
        hi: BytePos(
            108,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:5:9
  |
5 | var e = `${ 3 }` - 5;
  |         ^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            122,
        ),
        hi: BytePos(
            131,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:6:9
  |
6 | var f = `2${ 3 }` - 5;
  |         ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            145,
        ),
        hi: BytePos(
            154,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:7:9
  |
7 | var g = `${ 3 }4` - 5;
  |         ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            168,
        ),
        hi: BytePos(
            178,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:8:9
  |
8 | var h = `2${ 3 }4` - 5;
  |         ^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            198,
        ),
        hi: BytePos(
            206,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:10:14
   |
10 | var a2 = 1 * `${ 3 }`;
   |              ^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            221,
        ),
        hi: BytePos(
            230,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:11:14
   |
11 | var b2 = 1 * `2${ 3 }`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            245,
        ),
        hi: BytePos(
            254,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:12:14
   |
12 | var c2 = 1 * `${ 3 }4`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            269,
        ),
        hi: BytePos(
            279,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:13:14
   |
13 | var d2 = 1 * `2${ 3 }4`;
   |              ^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            290,
        ),
        hi: BytePos(
            298,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:14:10
   |
14 | var e2 = `${ 3 }` * 5;
   |          ^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            313,
        ),
        hi: BytePos(
            322,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:15:10
   |
15 | var f2 = `2${ 3 }` * 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            337,
        ),
        hi: BytePos(
            346,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:16:10
   |
16 | var g2 = `${ 3 }4` * 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            361,
        ),
        hi: BytePos(
            371,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:17:10
   |
17 | var h2 = `2${ 3 }4` * 5;
   |          ^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            391,
        ),
        hi: BytePos(
            399,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:19:14
   |
19 | var a3 = 1 & `${ 3 }`;
   |              ^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            414,
        ),
        hi: BytePos(
            423,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:20:14
   |
20 | var b3 = 1 & `2${ 3 }`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            438,
        ),
        hi: BytePos(
            447,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:21:14
   |
21 | var c3 = 1 & `${ 3 }4`;
   |              ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            462,
        ),
        hi: BytePos(
            472,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:22:14
   |
22 | var d3 = 1 & `2${ 3 }4`;
   |              ^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            483,
        ),
        hi: BytePos(
            491,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:23:10
   |
23 | var e3 = `${ 3 }` & 5;
   |          ^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            506,
        ),
        hi: BytePos(
            515,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:24:10
   |
24 | var f3 = `2${ 3 }` & 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            530,
        ),
        hi: BytePos(
            539,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:25:10
   |
25 | var g3 = `${ 3 }4` & 5;
   |          ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            554,
        ),
        hi: BytePos(
            564,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:26:10
   |
26 | var h3 = `2${ 3 }4` & 5;
   |          ^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            584,
        ),
        hi: BytePos(
            596,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:28:14
   |
28 | var a4 = 1 - `${ 3 - 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            611,
        ),
        hi: BytePos(
            624,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:29:14
   |
29 | var b4 = 1 - `2${ 3 - 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            639,
        ),
        hi: BytePos(
            652,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:30:14
   |
30 | var c4 = 1 - `${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            667,
        ),
        hi: BytePos(
            681,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:31:14
   |
31 | var d4 = 1 - `2${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            692,
        ),
        hi: BytePos(
            704,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:32:10
   |
32 | var e4 = `${ 3 - 4 }` - 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            719,
        ),
        hi: BytePos(
            732,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:33:10
   |
33 | var f4 = `2${ 3 - 4 }` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            747,
        ),
        hi: BytePos(
            760,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:34:10
   |
34 | var g4 = `${ 3 - 4 }5` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            775,
        ),
        hi: BytePos(
            789,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:35:10
   |
35 | var h4 = `2${ 3 - 4 }5` - 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            809,
        ),
        hi: BytePos(
            821,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:37:14
   |
37 | var a5 = 1 - `${ 3 * 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            836,
        ),
        hi: BytePos(
            849,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:38:14
   |
38 | var b5 = 1 - `2${ 3 * 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            864,
        ),
        hi: BytePos(
            877,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:39:14
   |
39 | var c5 = 1 - `${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            892,
        ),
        hi: BytePos(
            906,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:40:14
   |
40 | var d5 = 1 - `2${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            917,
        ),
        hi: BytePos(
            929,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:41:10
   |
41 | var e5 = `${ 3 * 4 }` - 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            944,
        ),
        hi: BytePos(
            957,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:42:10
   |
42 | var f5 = `2${ 3 * 4 }` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            972,
        ),
        hi: BytePos(
            985,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:43:10
   |
43 | var g5 = `${ 3 * 4 }5` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1000,
        ),
        hi: BytePos(
            1014,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:44:10
   |
44 | var h5 = `2${ 3 * 4 }5` - 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1034,
        ),
        hi: BytePos(
            1046,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:46:14
   |
46 | var a6 = 1 - `${ 3 & 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1061,
        ),
        hi: BytePos(
            1074,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:47:14
   |
47 | var b6 = 1 - `2${ 3 & 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1089,
        ),
        hi: BytePos(
            1102,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:48:14
   |
48 | var c6 = 1 - `${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1117,
        ),
        hi: BytePos(
            1131,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:49:14
   |
49 | var d6 = 1 - `2${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1142,
        ),
        hi: BytePos(
            1154,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:50:10
   |
50 | var e6 = `${ 3 & 4 }` - 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1169,
        ),
        hi: BytePos(
            1182,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:51:10
   |
51 | var f6 = `2${ 3 & 4 }` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1197,
        ),
        hi: BytePos(
            1210,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:52:10
   |
52 | var g6 = `${ 3 & 4 }5` - 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1225,
        ),
        hi: BytePos(
            1239,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:53:10
   |
53 | var h6 = `2${ 3 & 4 }5` - 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1259,
        ),
        hi: BytePos(
            1271,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:55:14
   |
55 | var a7 = 1 * `${ 3 - 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1286,
        ),
        hi: BytePos(
            1299,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:56:14
   |
56 | var b7 = 1 * `2${ 3 - 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1314,
        ),
        hi: BytePos(
            1327,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:57:14
   |
57 | var c7 = 1 * `${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1342,
        ),
        hi: BytePos(
            1356,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:58:14
   |
58 | var d7 = 1 * `2${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1367,
        ),
        hi: BytePos(
            1379,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:59:10
   |
59 | var e7 = `${ 3 - 4 }` * 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1394,
        ),
        hi: BytePos(
            1407,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:60:10
   |
60 | var f7 = `2${ 3 - 4 }` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1422,
        ),
        hi: BytePos(
            1435,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:61:10
   |
61 | var g7 = `${ 3 - 4 }5` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1450,
        ),
        hi: BytePos(
            1464,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:62:10
   |
62 | var h7 = `2${ 3 - 4 }5` * 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1484,
        ),
        hi: BytePos(
            1496,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:64:14
   |
64 | var a8 = 1 * `${ 3 * 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1511,
        ),
        hi: BytePos(
            1524,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:65:14
   |
65 | var b8 = 1 * `2${ 3 * 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1539,
        ),
        hi: BytePos(
            1552,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:66:14
   |
66 | var c8 = 1 * `${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1567,
        ),
        hi: BytePos(
            1581,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:67:14
   |
67 | var d8 = 1 * `2${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1592,
        ),
        hi: BytePos(
            1604,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:68:10
   |
68 | var e8 = `${ 3 * 4 }` * 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1619,
        ),
        hi: BytePos(
            1632,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:69:10
   |
69 | var f8 = `2${ 3 * 4 }` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1647,
        ),
        hi: BytePos(
            1660,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:70:10
   |
70 | var g8 = `${ 3 * 4 }5` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1675,
        ),
        hi: BytePos(
            1689,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:71:10
   |
71 | var h8 = `2${ 3 * 4 }5` * 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1709,
        ),
        hi: BytePos(
            1721,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:73:14
   |
73 | var a9 = 1 * `${ 3 & 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1736,
        ),
        hi: BytePos(
            1749,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:74:14
   |
74 | var b9 = 1 * `2${ 3 & 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1764,
        ),
        hi: BytePos(
            1777,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:75:14
   |
75 | var c9 = 1 * `${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1792,
        ),
        hi: BytePos(
            1806,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:76:14
   |
76 | var d9 = 1 * `2${ 3 & 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1817,
        ),
        hi: BytePos(
            1829,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:77:10
   |
77 | var e9 = `${ 3 & 4 }` * 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1844,
        ),
        hi: BytePos(
            1857,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:78:10
   |
78 | var f9 = `2${ 3 & 4 }` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1872,
        ),
        hi: BytePos(
            1885,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:79:10
   |
79 | var g9 = `${ 3 & 4 }5` * 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1900,
        ),
        hi: BytePos(
            1914,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:80:10
   |
80 | var h9 = `2${ 3 & 4 }5` * 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1934,
        ),
        hi: BytePos(
            1946,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:82:14
   |
82 | var aa = 1 & `${ 3 - 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1961,
        ),
        hi: BytePos(
            1974,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:83:14
   |
83 | var ba = 1 & `2${ 3 - 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1989,
        ),
        hi: BytePos(
            2002,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:84:14
   |
84 | var ca = 1 & `${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2017,
        ),
        hi: BytePos(
            2031,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:85:14
   |
85 | var da = 1 & `2${ 3 - 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2042,
        ),
        hi: BytePos(
            2054,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:86:10
   |
86 | var ea = `${ 3 - 4 }` & 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2069,
        ),
        hi: BytePos(
            2082,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:87:10
   |
87 | var fa = `2${ 3 - 4 }` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2097,
        ),
        hi: BytePos(
            2110,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:88:10
   |
88 | var ga = `${ 3 - 4 }5` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2125,
        ),
        hi: BytePos(
            2139,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:89:10
   |
89 | var ha = `2${ 3 - 4 }5` & 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2159,
        ),
        hi: BytePos(
            2171,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:91:14
   |
91 | var ab = 1 & `${ 3 * 4 }`;
   |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2186,
        ),
        hi: BytePos(
            2199,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:92:14
   |
92 | var bb = 1 & `2${ 3 * 4 }`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2214,
        ),
        hi: BytePos(
            2227,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:93:14
   |
93 | var cb = 1 & `${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2242,
        ),
        hi: BytePos(
            2256,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:94:14
   |
94 | var db = 1 & `2${ 3 * 4 }5`;
   |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2267,
        ),
        hi: BytePos(
            2279,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:95:10
   |
95 | var eb = `${ 3 * 4 }` & 6;
   |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2294,
        ),
        hi: BytePos(
            2307,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:96:10
   |
96 | var fb = `2${ 3 * 4 }` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2322,
        ),
        hi: BytePos(
            2335,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:97:10
   |
97 | var gb = `${ 3 * 4 }5` & 6;
   |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2350,
        ),
        hi: BytePos(
            2364,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:98:10
   |
98 | var hb = `2${ 3 * 4 }5` & 6;
   |          ^^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2384,
        ),
        hi: BytePos(
            2396,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:100:14
    |
100 | var ac = 1 & `${ 3 & 4 }`;
    |              ^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2411,
        ),
        hi: BytePos(
            2424,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:101:14
    |
101 | var bc = 1 & `2${ 3 & 4 }`;
    |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2439,
        ),
        hi: BytePos(
            2452,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:102:14
    |
102 | var cc = 1 & `${ 3 & 4 }5`;
    |              ^^^^^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2467,
        ),
        hi: BytePos(
            2481,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:103:14
    |
103 | var dc = 1 & `2${ 3 & 4 }5`;
    |              ^^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2492,
        ),
        hi: BytePos(
            2504,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:104:10
    |
104 | var ec = `${ 3 & 4 }` & 6;
    |          ^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2519,
        ),
        hi: BytePos(
            2532,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:105:10
    |
105 | var fc = `2${ 3 & 4 }` & 6;
    |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2547,
        ),
        hi: BytePos(
            2560,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:106:10
    |
106 | var gc = `${ 3 & 4 }5` & 6;
    |          ^^^^^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2575,
        ),
        hi: BytePos(
            2589,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/es6/templates/templateStringBinaryOperationsInvalid.ts:107:10
    |
107 | var hc = `2${ 3 & 4 }5` & 6;
    |          ^^^^^^^^^^^^^^

